WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172004
Modern Media Controls shouldn't be an experimental feature
https://bugs.webkit.org/show_bug.cgi?id=172004
Summary
Modern Media Controls shouldn't be an experimental feature
Dean Jackson
Reported
2017-05-11 17:19:04 PDT
Modern Media Controls shouldn't be an experimental feature
Attachments
Patch
(3.69 KB, patch)
2017-05-11 17:25 PDT
,
Dean Jackson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-05-11 17:22:59 PDT
<
rdar://problem/32146522
>
Dean Jackson
Comment 2
2017-05-11 17:23:00 PDT
<
rdar://problem/32146527
>
Dean Jackson
Comment 3
2017-05-11 17:25:32 PDT
Created
attachment 309830
[details]
Patch
Dean Jackson
Comment 4
2017-05-11 17:47:36 PDT
Committed
r216710
: <
http://trac.webkit.org/changeset/216710
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug