Modern Media Controls shouldn't be an experimental feature https://bugs.webkit.org/show_bug.cgi?id=172004 <rdar://problem/32146522>

Reviewed by Simon Fraser.

This is either always on or always off, so shouldn't
show up in an Experimental Features menu.

* Shared/WebPreferencesDefinitions.h: Move ModernMediaControlsEnabled
to a normal preference.

Canonical link: https://commits.webkit.org/188930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216710 268f45cc-cd09-0410-ab3c-d52691b4dbfc